# etl_data_fundation

./: .gitignore  DockerFile.yaml  Dockerfile  Makefile  README.md  collection.json  main.py  main_task.py  nginx.conf  notes.md  pyproject.toml  start.sh  teste.py  teste.rest  teste.xml
app/: __init__.py  main.py
app/data/: aaa.json
app/src/: config copy.py  config.py  coverages.py  handle_files.py  handle_gpkg.py  handle_links.py  handle_xlsx.py  handle_xml.py  main_task.py  modify_layer.py  publis_catalog.py  publish_dict.py  publish_geoserver.py
app/templates/: dictionary.html
config/: config.py
data/: COE_GOLD_JUMP.xlsx
docs/: path.md  teste.xml  xlm.md  xlsx.md
sandbox/: processa_planilha.py  teste.html  teste.py
sandbox/links/: get_tumbnail.py  teste3.py
sandbox/xtract/: gera_lista_layers.py  reste.md
tests/: upload.rest
